assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: sans-serif;
    background-color: whitesmoke;
    color: #383838;
}

html {
    scroll-behavior: smooth;
}

/*-------------------Header & Navigation Styling-------------------*/

:root{
    --white: #f9f9f9;
    --black: #36383F;
    --gray: #85888C;
}

a{
    text-decoration: none;
    font-family: "Poppins";
}
ul{
    list-style: none;
}

.header{
    background-color: whitesmoke;
    border-bottom: 0px solid #383838; 
    position: sticky;
    top: 0;
    width: 100%;
    z-index: 999;
    padding: 20px 0;
}

.logo{
    display: inline-block;
    color: #383838;
    font-size: 2rem;
    font-weight: 200;
    margin-left: 10px;
    font-family: "Poppins";
}

.nav{
    width: 100%;
    height: 100%;
    position: fixed;
    background-color: var(--black);
    overflow: hidden;

}
.menu a{
    display: block;
    padding: 20px 30px;
    color: whitesmoke;
}
.menu a:hover{
    background-color: var(--gray);
}
.nav{
    max-height: 0;
    transition: max-height .5s ease-out;
}


.hamb{
    cursor: pointer;
    float: right;
    padding: 40px 20px;
}

.hamb-line {
    background: red;
    display: block;
    height: 2px;
    position: relative;
    width: 24px;
    margin-top: -16px;

}

.hamb-line::before,
.hamb-line::after{
    background: red;
    content: '';
    display: block;
    height: 100%;
    position: absolute;
    transition: all .2s ease-out;
    width: 100%;
}
.hamb-line::before{
    top: 5px;
}
.hamb-line::after{
    top: -5px;
}

.side-menu {
    display: none;
} 

.side-menu:checked ~ nav{
    max-height: 100%;
}
.side-menu:checked ~ .hamb .hamb-line {
    background: transparent;
}
.side-menu:checked ~ .hamb .hamb-line::before {
    transform: rotate(-45deg);
    top:0;
}
.side-menu:checked ~ .hamb .hamb-line::after {
    transform: rotate(45deg);
    top:0;
}

/*---------------------------Header Logo Styling---------------------------*/

.name-wrapper {
    display: flex;
    position: relative;
    left: 4em;
    width: 90%;
    border-bottom: 0px solid #383838;
    margin-top: 5%;
}


#shop-name {
    font-family: 'Poppins', sans-serif;
    font-size: 14.2rem;
    font-weight: 200;
}

/*--------------------Scroll To Top Button--------------------*/

.scroll-to-top-btn {
    position: fixed;
    width: 40px;
    height: 40px;
    background: whitesmoke;
    border: 3px solid #383838;
    border-radius: 5px;
    bottom: 40px;
    right: 21px;
    text-decoration: none;
    text-align: center;
    line-height: 37px;
    font-size: 1.5rem;
    color: #383838;
}

.scroll-to-top-btn:hover {
    background: #383838;
    color: whitesmoke;
    border: 3px solid #383838;
}

/*-----------------------Hero Section Styling---------------------*/

.hero {
    max-width: 95%;
    padding: 2em;
    margin: 0 auto;
    padding-bottom: 0;
} 

.hero-image-container {
    max-width: 1224px;
    width: 90%;
    margin: auto;
    padding: 40px 0;
}

.hero-photo-gallery {
    display: flex;
    gap: 20px;
}

.hero-image-column {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.hero-photo img {
    width: 100%;
    height: 100%;
    border-radius: 5px;
    object-fit: cover;
}

/*----------------------Main Page Styling------------------------*/

.main-page {
    position: relative;
    width: 100%;
    height: 100%;
    margin-bottom: -25px;
    padding-top: 10px;
    display: flex;
    flex-direction: column;
    animation: slide-up;
    animation-timeline: view();  
    animation-range-start: cover 0vh;
    animation-range-end: contain 30vh; 
}

@keyframes slide-up {
    from {
        opacity: 1;
        line-height: 900px;
    }

    to {
        opacity: 1;
        line-height: 122px;
    }
}

.main-page h1 {
    width: 95%;
    font-size: 6.8rem;
    font-weight: 400;
    text-transform: uppercase;
    text-align: end;
    padding: .9em 0 1.7em 0;
}

.cta-btn {
    position: relative;
    text-align: right;
    margin-right: 10%;
    margin-top: -8%;
}

.button {
    cursor: pointer;
    color: whitesmoke;
    background-color: #383838;
    padding: .9em 2em;
    border-radius: 25px;
    border: 2px solid #383838;
    font-size: 0.9rem;
    text-transform: uppercase;
    text-decoration: none;

}

.button:hover {
    color: #383838;
    background-color: whitesmoke;
    border: 2px solid red;
    transition: 0.5s;
}

/*--------------------Video Section Styling---------------------*/

.video-section {
    position: relative;
    width: 80%;
    margin: 10% auto 2%;
    left: 0;
    padding-bottom: 0;
}

.video-section video {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 15px;
    filter: grayscale(70%);
}

/*---------------------Second Page Slogan Styling-----------------------*/

.second-page span {
    position: relative;
    width: 80%;
    height: 100%;
    display: flex;
    align-items: center;
    margin: 0 auto;
}

.second-page h1 {
    font-size: 8rem;
    font-weight: 400;
    text-transform: uppercase;
    text-align: center;  
    padding: 2em 0;
}

@keyframes scroll-reveal {
    to {
        background-size: 100% 100%;
    }
}

/*---------------------------About Section Styling--------------------------*/

#about {

    background-color: #383838;
    width: 97%;
    height: 170vh;
    margin: 0 auto;
}

.container {
    display: flex;
    margin-left: 10%;
    margin-top: -2%;

}

.about-img {

    width: 600px;
    height: 440px;
    margin-left: 5%;
    margin-right: 5%;
    margin-top: 65px;
}

.about-img img {
    width: 100%;
    height: 100%;
    border-radius: 5px;
}

.furniture-maker {
    object-fit: cover;
    filter: grayscale(100%);
}

#about-heading {
    font-size: 6rem;
    color: whitesmoke;
    font-weight: 400;
    text-transform: uppercase;
    padding: 10% 0 0 0%;
    margin-left: 3%;
    text-align: right;
    width: 700px;
}

#about-heading span {
    color: red;
    font-size: 7rem;
}
/* ... */

